# oxpg

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.sh  dev.sh  docker-compose.test.yaml  main.py  pyproject.toml
.github/workflows/: CI.yml
python/oxpg/: __init__.py  __init__.pyi  py.typed
src/: client.rs  errors.rs  lib.rs
src/client/: config.rs  conversions.rs  mod.rs  tests.rs
tests/: conftest.py  test_basic.py  test_connection.py  test_execute.py  test_query.py
