[package]
name = "oxpg"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxpg"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.101"
pyo3 = "0.28"
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7.16"
