[package]
name = "oxpg"
version = "0.1.0"
edition = "2024"

[lib]
name = "oxpg"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.101"
pyo3 = "0.26"
pyo3-async-runtimes = { version = "0.26.0", features = ["tokio-runtime"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7.16"

pyo3-stub-gen = "0.18"
pyo3-stub-gen-derive = "0.18.0"
