[package]
name = "oxpg"
version = "0.1.0"
edition = "2024"

[lib]
name = "oxpg"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["uuid", "chrono"] }
thiserror = "2.0.18"
anyhow = "1.0.101"
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.16", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
pyo3-stub-gen = "0.18"
pyo3-stub-gen-derive = "0.18.0"
chrono = { version = "0.4.24", features = ["serde"] }
serde_json = "1.0.149"
uuid = { version = "1.20", features = ["serde"] }

[dev-dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
