[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "oxpg"
version = "0.1.0"
description = "Fast PostgreSQL client for Python, built with Rust"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Miguel Elizalde Cruz" }]
keywords = ["postgresql", "database", "postgres", "rust"]
dependencies = ["asyncio>=4.0.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]


[dependency-groups]
dev = ["maturin>=1.11.5", "pytest>=9.0.2", "pytest-asyncio>=1.3.0"]

[tool.maturin]
python-source = "python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
